# gpui-markup

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: autofix-ci.yml  ci.yml  release.yml
src/: ast.rs  codegen.rs  lib.rs  parser.rs
src/snapshots/: gpui_markup__codegen__tests__anchored.snap  gpui_markup__codegen__tests__canvas.snap  gpui_markup__codegen__tests__complex_nested.snap  gpui_markup__codegen__tests__component.snap  gpui_markup__codegen__tests__component_nested.snap  gpui_markup__codegen__tests__component_with_children.snap  gpui_markup__codegen__tests__deferred.snap  gpui_markup__codegen__tests__div_with_element_children.snap  gpui_markup__codegen__tests__div_with_flag_attribute.snap  gpui_markup__codegen__tests__div_with_key_value_attribute.snap  gpui_markup__codegen__tests__div_with_mixed_attributes.snap  gpui_markup__codegen__tests__div_with_multiple_children.snap  gpui_markup__codegen__tests__div_with_multiple_flags.snap  gpui_markup__codegen__tests__div_with_single_child.snap  gpui_markup__codegen__tests__expression_element.snap  gpui_markup__codegen__tests__expression_element_with_attributes.snap  gpui_markup__codegen__tests__expression_element_with_children.snap  gpui_markup__codegen__tests__img.snap  gpui_markup__codegen__tests__method_call.snap  gpui_markup__codegen__tests__method_call_no_args.snap  gpui_markup__codegen__tests__method_chain.snap  gpui_markup__codegen__tests__method_with_generics.snap  gpui_markup__codegen__tests__multi_value_attribute.snap  gpui_markup__codegen__tests__nested_elements.snap  gpui_markup__codegen__tests__simple_div.snap  gpui_markup__codegen__tests__spread_children.snap  gpui_markup__codegen__tests__spread_with_siblings.snap  gpui_markup__codegen__tests__svg.snap
tests/: basic.rs  components.rs  dynamic.rs  trybuild.rs
tests/fail/: component_not_self_closing.rs  component_not_self_closing.stderr  deferred_child.rs  deferred_child.stderr  empty_braces.rs  empty_braces.stderr  empty_expression_tag.rs  empty_expression_tag.stderr  error_positions.rs  error_positions.stderr  invalid_child.rs  invalid_child.stderr  invalid_method_call.rs  invalid_method_call.stderr  invalid_spread.rs  unknown_element.rs  (+6 more)
